# PokemonPrimal

./: .gitignore  CMakeLists.txt  NETWORK-PROTOCOL.md  README-CLIENT.md  README-SERVER.md  README.md  SERVER-PROTOCAL.md  SERVER-PROTOCOL.md  SERVER-TO_ECS_PROTOCOL.md  build-SFML.cmake
include/Client/: Client.hpp  Game.hpp  NetworkClient.hpp  global.hpp
include/Client/Graph/: AnimatedSprite.hpp  Game.hpp  Sprite.hpp
include/Client/Graph/GUI/: HUDBattle.hpp  HUDMapEditor.hpp  HUDMenu.hpp  global.hpp
include/Client/Objects/: Character.hpp  Map.hpp  Player.hpp  PlayerCharacter.hpp  Trainer.hpp  TrainerSprite.hpp
include/Client/Scene/: Battle.hpp  IScene.hpp  MapEditor.hpp  Menu.hpp  Overworld.hpp
include/Core/Engine/: Engine.hpp  Event.hpp
include/Core/Engine/Components/: IComponent.hpp  Input.hpp  NPC.hpp  Player.hpp  Position.hpp  Trainer.hpp
include/Core/Engine/Entities/: Entity.hpp  EntityFactory.hpp  EntityManager.hpp
include/Core/Engine/Systems/: CombatSystem.hpp  ISystem.hpp  MvtSystem.hpp  NpcMovementSystem.hpp  (+1 more)
include/Core/Maps/: BitMap.hpp  MapManager.hpp  Map_Demo.hpp
include/Core/Pokemon/: GetPokemonFromId.hpp  Pokemon.hpp  PokemonMove.hpp  PokemonType.hpp  TypeTable.hpp
include/Engine/: Engine.hpp
include/Engine/Systems/: ISystem.hpp
include/GUI/: Game.hpp
include/GUI/HUD/: HUDMenu.hpp  IHUD.hpp
include/GUI/Scene/: IScene.hpp  Menu.hpp
include/Graph/: Game.hpp
include/Graph/HUD/: HUDMenu.hpp  IHUD.hpp
include/Graph/Scene/: IScene.hpp  Menu.hpp
include/Server/: NetworkServer.hpp  Server.hpp
scripts/: linux.sh
scripts/linux/: build.sh
scripts/windows/: build.bat
src/Client/: Game.cpp  Game_parseClientInput.cpp  NetworkClient.cpp  main.cpp
src/Client/Graph/: AnimatedSprite.cpp  Game.cpp  Game_parseClientInput.cpp  Sprite.cpp
src/Client/Objects/: Character.cpp  Map.cpp  Player.cpp  Trainer.cpp  TrainerSprite.cpp
src/Client/Scene/: Battle.cpp  MapEditor.cpp  Menu.cpp  Overworld.cpp
src/Engine/: Engine.cpp  Engine_parseServerInput.cpp
src/Engine/Components/: NPC.cpp
src/Engine/Entities/: Entity.cpp  EntityFactory.cpp  EntityManager.cpp
src/Engine/Maps/: BitMap.cpp  MapManager.cpp
src/Engine/Pokemon/: Pokemon.cpp  PokemonMove.cpp  getPokemonFromId.cpp
src/Engine/Systems/: CombatSystem.cpp  MvtSystem.cpp  NpcMovementSystem.cpp  PlayerMovementSystem.cpp
src/GUI/: Game.cpp  global.cpp
src/GUI/Scene/: Menu.cpp
src/Graph/: CMakeLists.txt  Game.cpp
src/Graph/Scene/: Menu.cpp
src/Server/: NetworkServer.cpp  NetworkServer_parseData.cpp  main.cpp
(+17 files in other folders)
